feat(ex4): decision tree

--- a/ex04/tree-methods-stubs.ipynb
+++ b/ex04/tree-methods-stubs.ipynb
@@ -115,18 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-71-9dc4ad03120d>, line 26)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-71-9dc4ad03120d>\"\u001b[0;36m, line \u001b[0;32m26\u001b[0m\n\u001b[0;31m    + leave_one_out_error(node.data, node.data[node.data[:, j] >= t], t, N)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def make_density_split_node(node, N, feature_indices):\n",
     "    '''\n",
@@ -153,7 +144,7 @@
     "        \n",
     "        for t in tj:\n",
     "            loo_error = (leave_one_out_error(node.data, node.data[node.data[:, j] <= t], t, N)\n",
-    "                       + leave_one_out_error(node.data, node.data[node.data[:, j] > t], t, N))\n",
+    "                        + leave_one_out_error(node.data, node.data[node.data[:, j] > t], t, N))\n",
     "\n",
     "            # choose the best threshold that\n",
     "            if loo_error < e_min:\n",
@@ -196,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -267,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,26 +271,67 @@
     "    n, D = node.data.shape\n",
     "\n",
     "    # find best feature j (among 'feature_indices') and best threshold t for the split\n",
+    "    e_min = float(\"inf\")\n",
+    "    j_min, t_min = None, None\n",
     "    \n",
+    "    for j in feature_indices:\n",
+    "        data_unique = np.sort(np.unique(node.data[:, j]), axis=0)\n",
+    "\n",
+    "        # Compute candidate thresholds\n",
+    "        tj = (data_unique[1:] + data_unique[:-1]) / 2\n",
+    "        \n",
+    "        for t in tj:\n",
+    "            gi_error = (gini_impurity(node.labels[node.data[:, j] <= t])\n",
+    "                      + gini_impurity(node.labels[node.data[:, j] > t]))\n",
+    "            \n",
+    "            if gi_error < e_min:\n",
+    "                e_min = gi_error\n",
+    "                j_min = j\n",
+    "                t_min = t\n",
     "    \n",
     "    # create children\n",
     "    node.left = Node()\n",
     "    node.right = Node()\n",
     "    \n",
     "    # initialize 'left' and 'right' with the data subsets and labels\n",
-    "    # according to the optimal split found above\n",
-    "    left.data = ... # data in left node\n",
-    "    left.labels = ... # corresponding labels\n",
-    "    right.data = ...\n",
-    "    right.labels = ...\n",
-    "\n",
+    "    # according to the optimal split found above    \n",
+    "    is_left = node.data[:, j_min] < t_min\n",
+    "    node.left.data = node.data[is_left]\n",
+    "    node.left.labels = node.labels[is_left]\n",
+    "    node.right.data = node.data[~is_left]\n",
+    "    node.right.labels = node.labels[~is_left]\n",
+    "    \n",
     "    # turn the current 'node' into a split node\n",
     "    # (store children and split condition)\n",
-    "    node.feature = ...\n",
-    "    node.threshold = ...\n",
+    "    node.feature = j_min\n",
+    "    node.threshold = t_min\n",
     "\n",
     "    # return the children (to be placed on the stack)\n",
-    "    return node.left, node.right    "
+    "    return node.left, node.right\n",
+    "\n",
+    "def gini_impurity(labels):\n",
+    "    N_l = labels.shape[0]\n",
+    "    return N_l * (1 - np.sum(np.square((np.unique(labels)[:, None] == labels).sum(axis=1)) / (N_l ** 2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1617.262103505843"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gini_impurity(data, labels=target)"
    ]
   },
   {
@@ -379,13 +411,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "tree = DensityTree()\n",
     "threes = data[target == 3]\n",
     "tree.train(threes, len(threes) / len(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree = DecisionTree()\n"
    ]
   },
   {
