refactor(ex4): rename stuff

--- a/ex04/tree-methods-stubs.ipynb
+++ b/ex04/tree-methods-stubs.ipynb
@@ -131,9 +131,8 @@
     "\n",
     "    # find best feature j (among 'feature_indices') and best threshold t for the split\n",
     "    e_min = float(\"inf\")\n",
-    "    j_min, t_min = None, None\n",
     "    \n",
-    "    for j in feature_indices:\n",
+    "    for feat in feature_indices:\n",
     "        # Hint: For each feature considered, first remove duplicate feature values using \n",
     "        # 'np.unique()'. Describe here why this is necessary.\n",
     "        # It is necessary because otherwise we would recieve a threshold candidates\n",
@@ -143,14 +142,14 @@
     "        tj = (data_unique[1:] + data_unique[:-1]) / 2\n",
     "        \n",
     "        for t in tj:\n",
-    "            loo_error = (leave_one_out_error(node.data, node.data[node.data[:, j] <= t], t, N)\n",
-    "                        + leave_one_out_error(node.data, node.data[node.data[:, j] > t], t, N))\n",
+    "            loo_error = ( leave_one_out_error(node.data, node.data[node.data[:, feat] <= t], t, N)\n",
+    "                        + leave_one_out_error(node.data, node.data[node.data[:, feat] > t], t, N))\n",
     "\n",
     "            # choose the best threshold that\n",
     "            if loo_error < e_min:\n",
     "                e_min = loo_error\n",
-    "                j_min = j\n",
-    "                t_min = t\n",
+    "                node.feature = feat\n",
+    "                node.threshold = t\n",
     "\n",
     "    # create children\n",
     "    node.left = Node()\n",
@@ -158,16 +157,11 @@
     "    \n",
     "    # initialize 'left' and 'right' with the data subsets and bounding boxes\n",
     "    # according to the optimal split found above\n",
-    "    is_left = node.data[:, j_min] < t_min\n",
+    "    is_left = node.data[:, node.feature] < node.threshold\n",
     "    node.left.data = node.data[is_left]\n",
     "    node.left.box = (node.left.data.max(), node.left.data.min())\n",
     "    node.right.data = node.data[~is_left]\n",
     "    node.right.box = (node.right.data.max(), node.right.data.min())\n",
-    "\n",
-    "    # turn the current 'node' into a split node\n",
-    "    # (store children and split condition)\n",
-    "    node.feature = j_min\n",
-    "    node.threshold = t_min\n",
     "\n",
     "    return node.left, node.right\n",
     "\n",
@@ -198,7 +192,6 @@
     "    '''\n",
     "    # compute and store leaf response\n",
     "    n = node.data.shape[0]\n",
-    "    v = ...\n",
     "    node.response = n / N"
    ]
   },
@@ -258,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,22 +265,23 @@
     "\n",
     "    # find best feature j (among 'feature_indices') and best threshold t for the split\n",
     "    e_min = float(\"inf\")\n",
-    "    j_min, t_min = None, None\n",
+    "    node.feature = None\n",
+    "    node.threshold = None\n",
     "    \n",
-    "    for j in feature_indices:\n",
-    "        data_unique = np.sort(np.unique(node.data[:, j]), axis=0)\n",
+    "    for feat in feature_indices:\n",
+    "        data_unique = np.sort(np.unique(node.data[:, feat]), axis=0)\n",
     "\n",
     "        # Compute candidate thresholds\n",
     "        tj = (data_unique[1:] + data_unique[:-1]) / 2\n",
     "        \n",
     "        for t in tj:\n",
-    "            gi_error = (gini_impurity(node.labels[node.data[:, j] <= t])\n",
-    "                      + gini_impurity(node.labels[node.data[:, j] > t]))\n",
+    "            gi_error = (gini_impurity(node.labels[node.data[:, feat] <= t])\n",
+    "                      + gini_impurity(node.labels[node.data[:, feat] > t]))\n",
     "            \n",
     "            if gi_error < e_min:\n",
     "                e_min = gi_error\n",
-    "                j_min = j\n",
-    "                t_min = t\n",
+    "                node.feature = feat\n",
+    "                node.threshold = t\n",
     "    \n",
     "    # create children\n",
     "    node.left = Node()\n",
@@ -295,17 +289,12 @@
     "    \n",
     "    # initialize 'left' and 'right' with the data subsets and labels\n",
     "    # according to the optimal split found above    \n",
-    "    is_left = node.data[:, j_min] < t_min\n",
+    "    is_left = node.data[:, node.feature] < node.threshold\n",
     "    node.left.data = node.data[is_left]\n",
     "    node.left.labels = node.labels[is_left]\n",
     "    node.right.data = node.data[~is_left]\n",
     "    node.right.labels = node.labels[~is_left]\n",
     "    \n",
-    "    # turn the current 'node' into a split node\n",
-    "    # (store children and split condition)\n",
-    "    node.feature = j_min\n",
-    "    node.threshold = t_min\n",
-    "\n",
     "    # return the children (to be placed on the stack)\n",
     "    return node.left, node.right\n",
     "\n",
@@ -316,27 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1617.262103505843"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gini_impurity(data, labels=target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -355,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -379,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -411,9 +380,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'j' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-ea57567b492b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDensityTree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mthrees\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtarget\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthrees\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthrees\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-3-cb293814b505>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, data, prior, n_min)\u001b[0m\n\u001b[1;32m     42\u001b[0m                 \u001b[0;31m# and returns the two children, which must be placed on the 'stack'.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m                 \u001b[0mfeature_indices\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpermutation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mD_try\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m                 \u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mright\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmake_density_split_node\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeature_indices\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m                 \u001b[0mstack\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mright\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-a84348429359>\u001b[0m in \u001b[0;36mmake_density_split_node\u001b[0;34m(node, N, feature_indices)\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0;31m# It is necessary because otherwise we would recieve a threshold candidates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;31m# on a feature value not between two of them\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m         \u001b[0mdata_unique\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m         \u001b[0;31m# Compute candidate thresholds\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mtj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdata_unique\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdata_unique\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'j' is not defined"
+     ]
+    }
+   ],
    "source": [
     "tree = DensityTree()\n",
     "threes = data[target == 3]\n",
@@ -426,7 +409,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree = DecisionTree()\n"
+    "tree = DecisionTree()\n",
+    "tree.train(data, target)"
    ]
   },
   {
