feat(ex4): add forests

--- a/ex04/tree-methods-stubs.ipynb
+++ b/ex04/tree-methods-stubs.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,11 +105,12 @@
     "            else:\n",
     "                # Call 'make_density_leaf_node()' to turn 'node' into a leaf node.\n",
     "                make_density_leaf_node(node, N)\n",
+    "        \n",
+    "        return self\n",
     "\n",
     "    def predict(self, x):\n",
     "        m, M = self.box\n",
     "        \n",
-    "        print(x, m, M)\n",
     "        if np.any(x > M) or np.any(x < m):\n",
     "            return 0\n",
     "\n",
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -248,6 +249,8 @@
     "            else:\n",
     "                # Call 'make_decision_leaf_node()' to turn 'node' into a leaf node.\n",
     "                make_decision_leaf_node(node)\n",
+    "        \n",
+    "        return self\n",
     "                \n",
     "    def predict(self, x):\n",
     "        leaf = self.find_leaf(x)\n",
@@ -397,47 +400,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "density_trees = [DensityTree().train(data[target == label], len(data[target == label]) / len(data)) \n",
+    "                     for label in np.unique(target)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.  0.  0.  1. 11.  0.  0.  0.  0.  0.  0.  7.  8.  0.  0.  0.  0.  0.\n",
-      "  1. 13.  6.  2.  2.  0.  0.  0.  7. 15.  0.  9.  8.  0.  0.  5. 16. 10.\n",
-      "  0. 16.  6.  0.  0.  4. 15. 16. 13. 16.  1.  0.  0.  0.  0.  3. 15. 10.\n",
-      "  0.  0.  0.  0.  0.  2. 16.  4.  0.  0.] [0. 0. 0. 6. 2. 0. 0. 0. 0. 0. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 6. 1. 0. 0. 0.] [ 0.  6. 16. 16. 16. 16. 15.  1.  1. 14. 16. 16. 16. 16. 16.  2.  1. 15.\n",
-      " 16. 16. 16. 16.  9.  0.  0.  8. 16. 16. 16. 16.  3.  0.  0.  5. 13. 16.\n",
-      " 16. 16. 11.  0.  0. 11. 16. 16. 16. 16. 16.  0.  0. 13. 16. 16. 16. 16.\n",
-      " 16.  5.  0.  5. 16. 16. 16. 16. 16.  8.]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0"
+       "[<__main__.DensityTree at 0x7fc00c0c84f0>,\n",
+       " <__main__.DensityTree at 0x7fc00bc58730>,\n",
+       " <__main__.DensityTree at 0x7fc00be92640>,\n",
+       " <__main__.DensityTree at 0x7fc00bea02b0>,\n",
+       " <__main__.DensityTree at 0x7fc00bdfdeb0>,\n",
+       " <__main__.DensityTree at 0x7fc00be0e850>,\n",
+       " <__main__.DensityTree at 0x7fc00c01c460>,\n",
+       " <__main__.DensityTree at 0x7fc00c07ed90>,\n",
+       " <__main__.DensityTree at 0x7fc00c03ba60>,\n",
+       " <__main__.DensityTree at 0x7fc00bec2610>]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tree.predict(data[target != 3][3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = data[target == 3][0]\n",
-    "(not (x.max() > 23)) * (not (x.min() < 2))"
+    "density_trees"
    ]
   },
   {
@@ -475,11 +472,13 @@
     "    def train(self, data, prior, n_min=20):\n",
     "        for tree in self.trees:\n",
     "            # train each tree, using a bootstrap sample of the data\n",
-    "            ... # your code here\n",
+    "            data_selection = np.random.choice(data, replace=True)\n",
+    "            tree = DensityTree()\n",
+    "            tree.train(data_selection, prior, n_min)\n",
     "\n",
     "    def predict(self, x):\n",
     "        # compute the ensemble prediction\n",
-    "        return ... # your code here"
+    "        return sum([tree.predict(x) for tree in self.trees]) / len(self.trees)"
    ]
   },
   {
@@ -500,11 +499,13 @@
     "    def train(self, data, labels, n_min=0):\n",
     "        for tree in self.trees:\n",
     "            # train each tree, using a bootstrap sample of the data\n",
-    "            ... # your code here\n",
-    "\n",
+    "            data_selection_indices = np.random.choice(data.shape[0], replace=True)\n",
+    "            tree = DensityTree()\n",
+    "            tree.train(data[data_selection_indices], labels[data_selection_indices], n_min)\n",
     "    def predict(self, x):\n",
     "        # compute the ensemble prediction\n",
-    "        return ... # your code here"
+    "        predictions = np.array([tree.predict(x) for tree in self.trees])\n",
+    "        return np.argmax(np.bincount(predictions))[0]"
    ]
   },
   {
