fix(ex4): density forrests

--- a/ex04/tree-methods-stubs.ipynb
+++ b/ex04/tree-methods-stubs.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -327,8 +327,8 @@
     "    node: the node to become a leaf\n",
     "    '''\n",
     "    # compute and store leaf response\n",
-    "    node.N = ...\n",
-    "    node.response = ... # your code here"
+    "    node.N = node.data.shape[0]\n",
+    "    node.response = node.label"
    ]
   },
   {
@@ -389,9 +389,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.DensityTree at 0x7f3bcbc1fca0>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tree = DensityTree()\n",
     "threes = data[target == 3]\n",
@@ -400,51 +411,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "density_trees = [DensityTree().train(data[target == label], len(data[target == label]) / len(data)) \n",
+    "density_trees = [DensityTree().train(data[target == label], len(data[target == label]) / len(data), 5) \n",
     "                     for label in np.unique(target)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "density_predictions = np.array([[tree.predict(row) for tree in density_trees] for row in data]).argmax(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<__main__.DensityTree at 0x7fc00c0c84f0>,\n",
-       " <__main__.DensityTree at 0x7fc00bc58730>,\n",
-       " <__main__.DensityTree at 0x7fc00be92640>,\n",
-       " <__main__.DensityTree at 0x7fc00bea02b0>,\n",
-       " <__main__.DensityTree at 0x7fc00bdfdeb0>,\n",
-       " <__main__.DensityTree at 0x7fc00be0e850>,\n",
-       " <__main__.DensityTree at 0x7fc00c01c460>,\n",
-       " <__main__.DensityTree at 0x7fc00c07ed90>,\n",
-       " <__main__.DensityTree at 0x7fc00c03ba60>,\n",
-       " <__main__.DensityTree at 0x7fc00bec2610>]"
+       "(42.07011686143573, '%')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "density_trees"
+    "100 * sum(density_predictions != target) / len(target), \"%\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.DecisionTree at 0x7f3bcb9c0490>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tree = DecisionTree()\n",
-    "tree.train(data, target)"
+    "decision_tree = DecisionTree()\n",
+    "decision_tree.train(data, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Node' object has no attribute 'response'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-13e094c26332>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0mdecision_tree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-16-13e094c26332>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0mdecision_tree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-6-5b34fb5582fe>\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0mleaf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_leaf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m         \u001b[0;31m# compute p(y | x)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mleaf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Node' object has no attribute 'response'"
+     ]
+    }
+   ],
+   "source": [
+    "[decision_tree.predict(row) for row in data]"
    ]
   },
   {
@@ -456,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -472,18 +517,18 @@
     "    def train(self, data, prior, n_min=20):\n",
     "        for tree in self.trees:\n",
     "            # train each tree, using a bootstrap sample of the data\n",
-    "            data_selection = np.random.choice(data, replace=True)\n",
+    "            data_selection_indices = np.random.choice(data.shape[0], size=data.shape[0], replace=True)\n",
     "            tree = DensityTree()\n",
-    "            tree.train(data_selection, prior, n_min)\n",
+    "            tree.train(data[data_selection_indices], prior, n_min)\n",
     "\n",
     "    def predict(self, x):\n",
     "        # compute the ensemble prediction\n",
-    "        return sum([tree.predict(x) for tree in self.trees]) / len(self.trees)"
+    "        return sum([tree.predict(x) for tree in self.trees]) / len(self.trees) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -499,7 +544,7 @@
     "    def train(self, data, labels, n_min=0):\n",
     "        for tree in self.trees:\n",
     "            # train each tree, using a bootstrap sample of the data\n",
-    "            data_selection_indices = np.random.choice(data.shape[0], replace=True)\n",
+    "            data_selection_indices = np.random.choice(data.shape[0], size=data.shape[0], replace=True)\n",
     "            tree = DensityTree()\n",
     "            tree.train(data[data_selection_indices], labels[data_selection_indices], n_min)\n",
     "    def predict(self, x):\n",
